src/pages/Signin/Signin.scss
@import 'Assets/styles/global.scss';
.content {
    &-wrap {
        margin: 50px 30px 30px 30px;
        display: flex;
        flex-direction: column;
        text-align: center;
        min-width: 400px;
        padding: 40px 60px 60px 60px;
        border-radius: 10px;
        @include secondary-gradient;
        @media (max-width: 990px) {
            max-width: 400px;
            margin: 0 auto;
            margin-top: 30px;
            &:last-child {
                margin-bottom: 30px;
            }
        }
        @media (max-width: 767px) {
            margin: 20px;
            padding: 35px;
            min-width: 325px;
        }
    }
    &-card {
        max-width: 320px;
        width: 100%;
        margin: 0 auto;
        h1 {
            margin: 0 !important;
            font-weight: 400 !important;
            font-size: 25px !important;
            margin-bottom: 35px !important;
        }
        Form {
            width: 100%;
        }
        input,
        .ant-input-password {
            border-radius: 5px;
            line-height: 2;
            svg {
                display: none;
            }
        }
        .btn-sign-in {
            display: -webkit-box;
            display: -ms-flexbox;
            display: flex;
            -webkit-box-pack: center;
            -ms-flex-pack: center;
            justify-content: center;
            -webkit-box-align: center;
            -ms-flex-align: center;
            align-items: center;
            background: rgb(245, 185, 75);
            background: -moz-linear-gradient(90deg, rgba(245, 185, 75, 1) 50%, rgba(254, 157, 44, 1) 100%);
            background: -webkit-linear-gradient(90deg, rgba(245, 185, 75, 1) 50%, rgba(254, 157, 44, 1) 100%);
            background: linear-gradient(90deg, rgba(245, 185, 75, 1) 50%, rgba(254, 157, 44, 1) 100%);
            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#f5b94b",endColorstr="#fe9d2c",GradientType=1);
            border-color: transparent !important;
            border-radius: 8px;
            height: 38px;
            font-weight: 700;
            text-shadow: none;
            border: 0;
        }

        Button {
            width: 100%;
        }
        .fgt-pwd {
            text-align: center;
            margin-bottom: 25px;
            margin-top: 5px;
            span {
                font-size: 12px;
                color: #fff;
                text-decoration: underline;
                &:hover {
                    text-decoration: none;
                }
            }
        }
        .tnc {
            text-align: center;
            margin-bottom: 25px;
            margin-top: 5px;
            span {
                font-size: 10px;
                color: #fff;
                &:not(:first-of-type) {
                    text-decoration: underline;
                    &:hover {
                        text-decoration: none;
                    }
                }
            }
            @media (max-width: 767px) {
                span {
                    font-size: 9px;
                }
            }
        }
        .btn-wrap {
            margin: 15px 0px 20px 0px;
        }
        .g-link {
            width: 100%;
            span {
                font-size: 12px;
                color: #fff;
                position: relative;
                &:before {
                    content: '';
                    position: absolute;
                    border-top: 1px solid #fff;
                    width: calc(100% + 20px);
                    right: 80px;
                    top: 8px;
                }
                &:after {
                    content: '';
                    position: absolute;
                    border-top: 1px solid #fff;
                    width: calc(100% + 20px);
                    left: 80px;
                    top: 8px;
                }
            }
        }
        .g-btn-wrap {
            width: 100%;
            background: #fff;
            line-height: 1.5;
            height: 38px;
            display: flex;
            align-items: center;
            justify-content: center;
            font-size: 12px;
            border-radius: 8px;
            padding: 10px;
            margin-top: 20px;
            position: relative;
            cursor: pointer;
            a {
                color: #000;
            }
            img {
                position: absolute;
                left: 10px;
                width: 20px;
                height: 20px;
            }
            span {
                font-weight: 600;
                font-size: 14px;
                color: #000;
            }
        }
        form {
            position: relative;
        }
    }
    &-head {
        background: rgb(240, 200, 91);
        background: -moz-linear-gradient(90deg, rgba(240, 200, 91, 1) 0%, rgba(255, 154, 41, 1) 100%);
        background: -webkit-linear-gradient(90deg, rgba(240, 200, 91, 1) 0%, rgba(255, 154, 41, 1) 100%);
        background: linear-gradient(90deg, rgba(240, 200, 91, 1) 0%, rgba(255, 154, 41, 1) 100%);
        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#f0c85b",endColorstr="#ff9a29",GradientType=1);
        padding: 15px 0px;
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        -webkit-box-pack: center;
        -ms-flex-pack: center;
        justify-content: center;
        -webkit-box-align: center;
        -ms-flex-align: center;
        align-items: center;
        @media (max-width: 768px) {
            padding: 10px 0px;
        }
        .logo-wrap {
            width: 160px;
            height: 50px;
            img {
                width: 100%;
                height: 100%;
            }
            @media (max-width: 768px) {
                width: 140px;
                height: 45px;
            }
        }
    }
}
.inner-signup {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
    @media (max-width: 990px) {
        -webkit-box-orient: vertical !important;
        -webkit-box-direction: normal !important;
        -ms-flex-direction: column !important;
        flex-direction: column !important;
        -webkit-box-align: center;
        -ms-flex-align: center;
        align-items: center;
    }
}
.ant-form-item {
    position: relative;
    text-align: left !important;
    .ant-form-item-label {
        position: absolute;
        left: 0;
        top: 0;
        z-index: 9;
        padding: 2px 0 0 10px;
        transition: all 200ms;
        opacity: 0.5;
        label {
            &::before,
            &::after {
                display: none;
            }
        }
    }
}
.ant-form-item-control::focus ~ .ant-form-item-label,
.ant-form-item-control::valid ~ .ant-form-item-label {
    font-size: 75%;
    transform: translate3d(0, -100%, 0);
    opacity: 1;
}
.ant-form-item-has-error {
    .ant-input {
        border-color: #fff !important;
    }
}
.ant-form-item-has-error .ant-input-affix-wrapper {
    border-color: #fff !important;
}

.example {
    margin: 12px;
}

.ant-input + .label-float,
.ant-input + .label-float {
    transform: translate3d(0, -80%, 0);
    opacity: 1;
    color: $text-sec-color;
    font-size: 8px !important;
}
.float-wrap {
    position: relative;
    .float-label {
        .ant-input {
            height: 40px;
            font-size: 10px;
        }
        .label {
            top: 12px !important;
            color: $text-color;
        }
    }
}
.form-err {
    color: $danger-color;
    position: absolute;
    left: 0;
    top: 45px;
    z-index: 2;
    font-size: 9px;
}
.err-msg {
    .ant-input {
        box-shadow: 0px 3px 6px #fb443729;
        border: 1px solid #fb4437;
    }
}
.msg-box {
    top: auto;
    bottom: 85px !important;
    background: #fedad7;
    color: #fb4437;
    width: 100%;
    text-align: left;
    padding: 4px 10px;
    border-radius: 5px;
}
.ant-form-item-has-error {
    .ant-input {
        box-shadow: 0px 3px 6px #fb443729 !important;
        border: 1px solid #fb4437 !important;
    }
}

@media (min-width: 1920px) {
    .content-card {
        h1 {
            font-size: 30px !important;
        }
        .fgt-pwd {
            span {
                font-size: 14px;
            }
        }
        .btn-sign-in {
            span {
                font-size: 18px;
            }
        }
        .g-link {
            span {
                font-size: 18px;
                &:before {
                    width: 75%;
                    right: 105px;
                    top: 12px;
                }
                &:after {
                    width: 75%;
                    left: 105px;
                    top: 12px;
                }
            }
        }
        .g-btn-wrap {
            span {
                font-size: 16px;
            }
        }
    }
}
@media (max-width: 1919px) {
    .content-card {
        h1 {
            font-size: 26px !important;
        }
        .fgt-pwd {
            span {
                font-size: 12px;
            }
        }
        .btn-sign-in {
            span {
                font-size: 14px;
            }
        }
        .g-link {
            span {
                font-size: 11px;
                &:before {
                    width: calc(100% + 30px);
                    right: 75px;
                    top: 8px;
                }
                &:after {
                    width: calc(100% + 30px);
                    left: 75px;
                    top: 8px;
                }
            }
        }
        .g-btn-wrap {
            span {
                font-size: 14px;
            }
        }
    }
    .content-wrap {
        padding: 30px 30px 40px 30px;
    }
}
@media (max-width: 1366px) {
    .content-card {
        h1 {
            font-size: 24px !important;
        }

        .btn-sign-in {
            span {
                font-size: 14px;
            }
        }
        .g-link {
            span {
                font-size: 12px;
                &:before {
                    width: calc(100% + 30px);
                    right: 75px;
                    top: 8px;
                }
                &:after {
                    width: calc(100% + 30px);
                    left: 75px;
                    top: 8px;
                }
            }
        }
        .g-btn-wrap {
            span {
                font-size: 13px;
            }
        }
    }
    .content-wrap {
        padding: 30px 20px 40px 20px;
    }
}
@media (max-width: 767px) {
    .content-card {
        h1 {
            font-size: 22px !important;
        }
        .fgt-pwd {
            span {
                font-size: 12px;
            }
        }
        .btn-sign-in {
            height: 30px;
            span {
                font-size: 12px;
            }
        }
        .g-link {
            span {
                font-size: 12px;
                &:before {
                    width: calc(100% + 30px);
                    right: 75px;
                    top: 8px;
                }
                &:after {
                    width: calc(100% + 30px);
                    left: 75px;
                    top: 8px;
                }
            }
        }
        .g-btn-wrap {
            height: 30px;
            span {
                font-size: 13px;
            }
            img {
                width: 15px;
                height: 15px;
            }
        }
        .float-label {
            margin-bottom: 0px !important;
            input {
                height: 30px;
            }
            .label {
                font-size: 12px;
                top: 6px !important;
            }
        }
    }
}

